--- a/index.css
+++ b/index.css
@@ -3,12 +3,14 @@
 *{
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     text-decoration: none;
     list-style-type: none;
    
 }
 body{
+    width: 100%;
+    height: max-content;
     background-image: url(watercolour-1325656__480.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -18,7 +20,7 @@ body{
 }
 main{
     
-    min-height: 100vh;
+    height: 100vh;
     width: 50%;
     margin: auto;
     margin-bottom: 1rem;
@@ -112,7 +114,8 @@ header{
     width: 100%;
     height: 1.4rem;
     border: none;
-    font-family: 'Lobster', cursive;
+    font-family: 'Gluten', cursive;
+    font-weight: 900;
 }
 .container__button{
     
@@ -127,7 +130,8 @@ header{
 }
 
 .area{
-   max-width: 80%;
+   max-width: max-content;
+   max-height: 3rem;
     display:flex ;
     justify-content: flex-start;
     color: rgb(182, 5, 93);
@@ -156,15 +160,16 @@ header{
     text-overflow:clip;
     word-wrap: break-word;
    
-    background-color: rgb(4, 160, 160);
+    background-color: rgb(133, 233, 233);
     color: rgb(70, 19, 3);
-    font-size: .8rem;
+    font-size: .9rem;
     line-height: 1rem;
     margin-bottom: .6rem;
     padding: .3rem;
     border-radius: .3rem;
     box-shadow: 5px 5px 5px ;
     font-family: 'Gluten', cursive;
+    font-weight: 900;
     
 }
 .as{
