--- a/index.css
+++ b/index.css
@@ -6,12 +6,14 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style-type: none;
+    border: none;
    
 }
 body{
     width: 100%;
     height: max-content;
-    background-image: url(watercolour-1325656__480.jpg);
+    background-image: url(watercolour-1325656__480.jpg)
+    ;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -20,7 +22,7 @@ body{
 }
 main{
     
-    height: 100vh;
+    min-height:50rem ;
     width: 50%;
     margin: auto;
     margin-bottom: 1rem;
@@ -52,12 +54,12 @@ header{
 .refresh{
     cursor: pointer;
     margin-top: 2rem;
+    color: rgb(113, 247, 3);
    
     width: 3rem;
     font-size: 2rem;
     height: 3rem;
     border-radius: 50%;
-    color: rgb(113, 247, 3);
     background-color: rgb(4, 160, 160);
     border: none;
     box-shadow: 5px 5px 5px rgb(3, 202, 228);
@@ -107,74 +109,124 @@ header{
 }
 .container_input{
     
-    width: 60%;
+    width: 70%;
    display: flex;
+   justify-content: space-between;
 }
 .container__input{
-    width: 100%;
-    height: 1.4rem;
+    flex: 1 1 0%;
+    font-size: 1.5rem;
     border: none;
     font-family: 'Gluten', cursive;
     font-weight: 900;
+    padding: 1rem;
+    outline: none;
+   
+    border-radius: 1rem;
+    box-shadow: inset 1px 3px 2px rgb(49, 58, 58);
+    background: linear-gradient(to right, rgb(145, 248, 248), rgb(5, 185, 185));
 }
-.container__button{
-    
-    left: 23.4rem;
+h2{
+   
+    font-family: 'Gluten', cursive;
+    margin-bottom: 1rem;
+    font-size: 3rem
+}
+.input-button{
+    color: rgb(218, 207, 207);
+    cursor: pointer;
     border: none;
-    width: 1.8rem;
-    height: 1.4rem;
+    appearance: none;
+    border: none;
+    background: none;
+    outline: none;
+    background: linear-gradient(to right, rgb(3, 92, 92), rgb(5, 185, 185));
+    margin-left: .6rem;
+    border-radius: .6rem;
+    font-size: 1rem;
+    padding: .4rem;
+    font-weight: 700;
+    font-family: 'Gluten', cursive;
+    box-shadow:  1px 1px 1px 1px rgb(49, 58, 58) ;
     
-    background-color: rgb(5, 252, 190);
-    color: rgb(21, 95, 21);
+   
 
 }
 
 .area{
-   max-width: max-content;
-   max-height: 3rem;
-    display:flex ;
-    justify-content: flex-start;
-    color: rgb(182, 5, 93);
+
+   max-width: 100%;
+    margin-top: 3rem;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+    
     
 }
-.to-dos-area{
-    margin-top: 1rem;
+.area .to-dos-area{
+    
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: rgb(138, 253, 215); */
+    
+    word-wrap: break-word;
+    border-radius: 1rem;
+    
+}
+.to-dos-area .text{
+  
+   padding-top: .9rem;
+   padding-left: .5rem;
+    flex: 1 1 0%;
+    border-radius: 1rem;
+    outline: none;
+    /* background-color: rgb(138, 253, 215); */
+    font-family: 'Gluten', cursive;
+    font-weight: 800;
+    font-size: 1rem;
+    box-shadow:  1px 3px 2px rgb(49, 58, 58);
+    background: linear-gradient(to right, rgb(145, 248, 248), rgb(5, 185, 185));
+    
+    
+
+}
+.to-dos-area .done{
     cursor: pointer;
-    max-width: 100%;
+    color: white;
+    margin: 0 .1rem;
+    width: 2.9rem;
+    border: none;
+    border-radius: .6rem;
+    background-color: rgb(87, 170, 4);
+    font-weight: 800;
+    height: 2.9rem;
+    box-shadow:  1px 3px 2px rgb(49, 58, 58);
+    font-family: 'Gluten', cursive;
+}
+.to-dos-area .delete{
+    cursor: pointer;
+    color: white;
+    border-radius: .6rem;
+    background-color: rgba(240, 1, 49, 0.884);
+    border: none;
+    font-weight: 800;
+    height: 2.9rem;
+    box-shadow:  1px 3px 2px rgb(49, 58, 58);
+    font-family: 'Gluten', cursive;
+    width: 2.9rem;
+}
+
+.to-dos-area .action{
+    display: flex;
+    justify-content: baseline;
+    
+    height: 100%;
   
 }
-#arrow{
-    cursor: pointer;
-    width: 1rem;
-   display: none;
-    margin-left: rem;
-    margin-top: -1.5rem;
-    padding-left: 1rem;
-    color: rgb(20, 37, 2);
 
 
-}
 
-.to-do{
-    /* box-sizing: border-box; */
-    text-overflow:clip;
-    word-wrap: break-word;
-   
-    background-color: rgb(133, 233, 233);
-    color: rgb(70, 19, 3);
-    font-size: .9rem;
-    line-height: 1rem;
-    margin-bottom: .6rem;
-    padding: .3rem;
-    border-radius: .3rem;
-    box-shadow: 5px 5px 5px ;
-    font-family: 'Gluten', cursive;
-    font-weight: 900;
-    
-}
-.as{
-    display: none;
-}
 
 
 @media(max-width:1030px){
